2014-07-24  Dan Bernstein  <mitz@apple.com>

        <rdar://problem/17766348> [Cocoa] WebCore::ProtectionSpace doesn’t preserve all NSURLProtectionSpace properties, such as the distinguishedNames array
        https://bugs.webkit.org/show_bug.cgi?id=135229

        Reviewed by Alexey Proskuryakov.

        * CMakeLists.txt: Updated for rename of a source file.

        * WebCore.exp.in: Updated.

        * WebCore.vcxproj/WebCore.vcxproj: Updated for rename of source files, added
        ProtectionSpaceCFNet.{cpp,h}.
        * WebCore.vcxproj/WebCore.vcxproj.filters: Ditto.

        * WebCore.xcodeproj/project.pbxproj: Updated for rename of source files, added
        ProtectionSpaceCococa.{h.mm}.

        * platform/network/ProtectionSpace.cpp: Renamed to ProtectionSpaceBase.cpp.
        * platform/network/ProtectionSpace.h: This file was renamed to ProtectionSpaceBase.h, and
        in its place added a generic ProtectionSpace class that just derives from
        ProtectionSpaceBase. For Cocoa and CFNetwork, ProtectionSpace{Cocoa,CFNet}.h is included
        instead of the generic class.

        * platform/network/ProtectionSpaceBase.cpp: Renamed ProtectionSpace.cpp to this.
        (WebCore::ProtectionSpaceBase::ProtectionSpaceBase): Updated for rename.
        (WebCore::ProtectionSpaceBase::host): Ditto.
        (WebCore::ProtectionSpaceBase::port): Ditto.
        (WebCore::ProtectionSpaceBase::serverType): Ditto.
        (WebCore::ProtectionSpaceBase::isProxy): Ditto.
        (WebCore::ProtectionSpaceBase::realm): Ditto.
        (WebCore::ProtectionSpaceBase::authenticationScheme): Ditto.
        (WebCore::ProtectionSpaceBase::receivesCredentialSecurely): Removed CFNetwork-specific part,
        which is now implemented in ProtectionSpaceCFNet.cpp.
        (WebCore::ProtectionSpaceBase::compare): Replaced operator== with this, and made it call
        ProtectionSpace::platformCompare at the end if needed.
