@@ -1,5 +1,17 @@
 2014-07-24  Dan Bernstein  <mitz@apple.com>
 
+        Attempted Windows build fix.
+
+        * platform/network/cf/AuthenticationCF.cpp:
+        (WebCore::AuthenticationChallenge::AuthenticationChallenge):
+        * platform/network/cf/CredentialStorageCFNet.cpp:
+        (WebCore::CredentialStorage::getFromPersistentStorage):
+        * platform/network/cf/ProtectionSpaceCFNet.cpp:
+        (WebCore::ProtectionSpace::receivesCredentialSecurely):
+        (WebCore::ProtectionSpaceBase::receivesCredentialSecurely): Deleted.
+
+2014-07-24  Dan Bernstein  <mitz@apple.com>
+
         <rdar://problem/17766348> [Cocoa] WebCore::ProtectionSpace doesn’t preserve all NSURLProtectionSpace properties, such as the distinguishedNames array
         https://bugs.webkit.org/show_bug.cgi?id=135229
 
